Add project 7 and project 8 details to portfolio

--- a/index.html
+++ b/index.html
@@ -79,6 +79,34 @@
       </div>
       <!-- Projects Grid -->
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <!-- Project 7: Curiorio Java -->
+    <div class="project-card p-6 bg-gray-800 rounded-lg" data-category="ios" data-aos="fade-up" data-aos-delay="500">
+      <img src="./assets/project-7.jpg" alt="Curiorio Java project screenshot" class="mb-4 w-full h-auto rounded" />
+      <h3 class="text-xl font-semibold text-gray-100">Curiorio Java</h3>
+      <p class="text-gray-300 text-sm mb-2">
+        A Java-based application that provides users to manage the inventory of parcels . Built with Java, it allows users to interact with different features and functionalities.
+      </p>
+      <div class="mb-3">
+        <span class="inline-block bg-gray-700 text-gray-300 text-xs px-2 py-1 rounded">Java</span>
+      </div>
+      <a href="https://github.com/heyyykk3/ParcelInventorySystemV2" target="_blank" rel="noopener" class="text-teal-400 hover:underline text-sm"><i class="fab fa-github mr-1"></i> GitHub</a>
+    </div>
+  </div>
+</div>
+<!-- project 8: d0tai-->
+<div class="project-card p-6 bg-gray-800 rounded-lg" data-category="ios" data-aos="fade-up" data-aos-delay="500">
+  <img src="./assets/project-8.jpg" alt="d0tai the all in one assistant project screenshot" class="mb-4 w-full h-auto rounded" />
+  <h3 class="text-xl font-semibold text-gray-100">d0tai the all in one assistant</h3>
+  <p class="text-gray-300 text-sm mb-2">
+    A react.js -based web-application that provides users to use various powerful ai models right at your palm or laptop as its a cross devices app. Built with React js and backed up by various fall back of ai models which helps to use anything at best with great latency.
+  </p> 
+  <div class="mb-3">
+    <span class="inline-block bg-gray-700 text-gray-300 text-xs px-2 py-1 rounded">React.js</span>
+    <span class="inline-block bg-gray-700 text-gray-300 text-xs px-2 py-1 rounded">AI Models</span>
+  </div>
+  <a href="https://d0tai.vercel.app/" target="_blank" rel="noopener" class="text-teal-400 hover:underline text-sm"><i class="fab fa-github mr-1"></i> App link</a>
+</div>
+
         <!-- Project 1: Montreal Event Platform -->
         <div class="project-card p-6 bg-gray-800 rounded-lg" data-category="web" data-aos="fade-up" data-aos-delay="0">
           <img src="./assets/project-1.png" alt="Montreal Event Platform project screenshot" class="mb-4 w-full h-auto rounded" />
